--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.electron.app
-productName: Focus Pro
+productName: focus-pro
 directories:
   buildResources: build
 files:
@@ -12,7 +12,7 @@ files:
 asarUnpack:
   - resources/**
 win:
-  executableName: Focus Pro
+  executableName: focus-pro
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
